--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:id="@+id/linear"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     android:padding="30dp"
     tools:context=".MainActivity">
 
@@ -21,6 +22,7 @@
             android:text="회전 각도 입력: "/>
         <EditText
             android:id="@+id/editDegree"
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
@@ -30,15 +32,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
+            android:id="@+id/imgv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/imgs1"/>
     </LinearLayout>
-    <Button
-        android:id="@+id/btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="변경될 버튼"/>
+<!--    <Button-->
+<!--        android:id="@+id/btn"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="변경될 버튼"/>-->
 
 
 </LinearLayout>
