--- a/app/src/main/res/menu/optionmenu.xml
+++ b/app/src/main/res/menu/optionmenu.xml
@@ -1,24 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/itemGray"
-        android:title="배경색(회색)"/>
-    <item
-        android:id="@+id/itemYellow"
-        android:title="배경색(노란색)"/>
-    <item
-        android:id="@+id/itemDkGray"
-        android:title="배경색(어두운회색)"/>
-    <item
-        android:id="@+id/btnChange"
-        android:title="버튼변경">
-        <menu>
-            <item
-                android:id="@+id/btnRotate"
-                android:title="버튼 회전(60도)"/>
-            <item
-                android:id="@+id/btnZoomin"
-                android:title="버튼 확대(2배)"/>
-        </menu>
-    </item>
+        android:id="@+id/itemRotate"
+        android:title="그림회전"/>
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/item1"
+            android:title="한라산" />
+        <item
+            android:id="@+id/item2"
+            android:title="추자도" />
+        <item
+            android:id="@+id/item3"
+            android:title="범섬" />
+    </group>
+<!--    <item-->
+<!--        android:id="@+id/itemYellow"-->
+<!--        android:title="배경색(노란색)"/>-->
+<!--    <item-->
+<!--        android:id="@+id/itemDkGray"-->
+<!--        android:title="배경색(어두운회색)"/>-->
+<!--    <item-->
+<!--        android:id="@+id/btnChange"-->
+<!--        android:title="버튼변경">-->
+<!--        <menu>-->
+<!--            <item-->
+<!--                android:id="@+id/btnRotate"-->
+<!--                android:title="버튼 회전(60도)"/>-->
+<!--            <item-->
+<!--                android:id="@+id/btnZoomin"-->
+<!--                android:title="버튼 확대(2배)"/>-->
+<!--        </menu>-->
+<!--    </item>-->
 </menu>
